# multi-platform-device-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: admin.py  authentication.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/management/commands/: setup_test_data.py
api/migrations/: 0001_initial.py
config/: settings.py
